--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
   "name": "react-scomponent",
-  "version": "1.0.0",
-  "description": "React Component with a wrapped setState function to allow simpler component and cross-component scripting using my state manager library. ",
-  "main": "state.component.tsx",
+  "version": "2.0.0",
+  "description": "Barebones esbuild and test node server implementation. For building",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/moothyknight/scomponent.git"
+    "start": "tinybuild",
+    "build": "tinybuild build",
+    "serve": "tinybuild serve",
+    "init": "node tinybuild/init.js",
+    "concurrent": "concurrently \\'npm run python\\' \\'npm start\\'",
+    "dev": "npm run pip && npm i --save-dev concurrently && npm i --save-dev nodemon && npm run concurrent",
+    "startdev": "nodemon --exec \\'node tinybuild.js\\' -e ejs,js,ts,jsx,tsx,css,html,jpg,png,scss,txt,csv",
+    "python": "python python/server.py",
+    "pip": "pip install quart && pip install websockets",
+    "pwa": "npm i workbox-cli && workbox generateSW node_server/pwa/workbox-config.js && npm run build && npm start"
   },
   "keywords": [
-    "state",
-    "component",
-    "react"
+    "esbuild"
   ],
-  "dependencies": {
-    "react":"^16.0.0",
-    "anotherstatemanager":"^1.1.0"
-  },
-  "author": "Joshua Brewster",
+  "author": "",
   "license": "AGPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/moothyknight/scomponent/issues"
-  },
-  "homepage": "https://github.com/moothyknight/scomponent#readme"
+  "dependencies": {},
+  "devDependencies": {},
+  "nodemonConfig": {
+    "env": {
+      "NODEMON": true
+    },
+    "ignore": [
+      "dist/",
+      ".temp/"
+    ]
+  }
 }
