--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-scomponent",
-  "version": "2.0.3",
+  "version": "2.1.1",
   "description": "Barebones esbuild and test node server implementation. For building",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -22,8 +22,9 @@
   ],
   "author": "",
   "license": "AGPL-3.0-or-later",
-  "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "react": "*"
+  },
   "nodemonConfig": {
     "env": {
       "NODEMON": true
