--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,10 @@
       "skipLibCheck": true /* Skip type checking of declaration files. */,
       "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */,
       "outDir": "./dist" /* Redirect output structure to the directory. */,
-      "strict": true /* Enable all strict type-checking options. */,
+      "strict": false /* Enable all strict type-checking options. */,
       "esModuleInterop": true /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */,
       // "checkJs": true,                       /* Report errors in .js files. */
-      // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
+      "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
       // "lib": [],                             /* Specify library files to be included in the compilation. */  
       // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
       // "sourceMap": true,                     /* Generates corresponding '.map' file. */
